newlines in keyword text

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,2 +1,3 @@
-<h2>ASIN: {{ product.asin }} </h2>
-<div><span>keywords: </span>{{product.keywordListText}}</div>
+<h5>ASIN: {{ product.asin }} </h5>
+<div><span>keywords: </span> <br>
+    <textarea rows="20">{{product.keywordListText}}</textarea></div>
