--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,7 @@
 <h5>ASIN: {{ product.asin }} </h5>
 <div><span>keywords: </span> <br>
-    <textarea rows="20">{{product.keywordListText}}</textarea></div>
+    <button *ngIf="editMode == MODE_EDIT" (click)="onSave()">Save</button>
+    <button *ngIf="editMode == MODE_VIEW" (click)="onEnterEditMode()">Edit</button>
+    <textarea *ngIf="editMode == MODE_EDIT" [(ngModel)]="product.keywordListText" placeholder="name" rows="10"></textarea>
+    <div *ngIf="editMode == MODE_VIEW">{{product.keywordListText}}</div>
+</div>
