--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,9 +1,14 @@
-<h5>ASIN:  <input type="text" [(ngModel)]="product.asin"></h5>
+<h5>ASIN:
+  <input type="text" *ngIf="asinEditMode == MODE_EDIT" [(ngModel)]="product.asin"  >
+  <span  *ngIf="asinEditMode == MODE_VIEW" >{{product.asin}}</span>
+  <button *ngIf="asinEditMode == MODE_EDIT" (click)="onSaveAsin()">Save</button>
+    <button *ngIf="asinEditMode == MODE_VIEW" (click)="onEnterAsinEditMode()">Edit</button>
+</h5>
 <div><span>keywords: </span> <br>
-    <button *ngIf="editMode == MODE_EDIT" (click)="onSave()">Save</button>
-    <button *ngIf="editMode == MODE_VIEW" (click)="onEnterEditMode()">Edit</button>
-    <textarea *ngIf="editMode == MODE_EDIT" [(ngModel)]="product.keywordListText" placeholder="name" rows="10"></textarea>
-    <div *ngIf="editMode == MODE_VIEW">
+    <button *ngIf="listEditMode == MODE_EDIT" (click)="onSaveList()">Save</button>
+    <button *ngIf="listEditMode == MODE_VIEW" (click)="onEnterListEditMode()">Edit</button>
+    <textarea *ngIf="listEditMode == MODE_EDIT" [(ngModel)]="product.keywordListText" placeholder="name" rows="10"></textarea>
+    <div *ngIf="listEditMode == MODE_VIEW">
         <table class="table  table-striped table-condensed keyword-list-table" *ngFor='let keyword of product.keywordList' >
             <tr>
                 <td>{{keyword}}</td>
