--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
   </h1>
 
 </div>
-<div class="container">
-  <app-product></app-product>
+<div class="">
+  <app-products></app-products>
 </div>
 
 
