saving and loading

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,12 +1,13 @@
 <div>
   <h3>Project&nbsp;&nbsp;&nbsp;Name:
     <input type="text" [(ngModel)]="project.name">
+    <button (click)="onLoadProject()">Load Project</button>
     <br/>Target ASIN:
     <input type="text" [(ngModel)]="project.asin">
   </h3>
 </div>
 <button (click)="onSaveProject()">Save Project</button>
-<div *ngFor="let product of project.products">
-  <app-product></app-product>
+<div *ngFor="let item of project.products">
+  <app-product [product]="item" ></app-product>
 </div>
 <button (click)="onAddProduct()">Add</button>
