remove product working

--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -10,4 +10,4 @@
 <div *ngFor="let item of project.products">
   <app-product [product]="item" ></app-product>
 </div>
-<button (click)="onAddProduct()">Add</button>
+<button (click)="onAddProduct()">Add Product</button>
