list and navigating to project edit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,12 @@
   </h1>
 
 </div>
+<nav>
+  <a routerLink="/list">List</a>
+</nav>
+<router-outlet></router-outlet>
 <div class="">
-  <app-project></app-project>
+  <!-- <app-project></app-project> -->
 </div>
 
 
