enabled add new project

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,6 @@
 <h3>Projects</h3>
 <div class="grid grid-pad">
+    <a routerLink="/project/">Add New</a>
   <a *ngFor="let project of projectList" class=""
       routerLink="/project/{{project.name}}">
     <div class="">
