--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,7 +1,7 @@
 <div>
   <h3>Project&nbsp;&nbsp;&nbsp;Name:
     <input type="text" [(ngModel)]="project.name">
-    <button (click)="onLoadProject()">Load Project</button>
+    <!-- <button (click)="onLoadProject()">Load Project</button> -->
     <br/>Target ASIN:
     <input type="text" [(ngModel)]="project.asin">
   </h3>
