--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -16,12 +16,19 @@
     <br>
     <button class="btn btn-warning btn-xs" *ngIf="listEditMode == MODE_EDIT" (click)="onSaveList()">Save List</button>
     <button class="btn btn-info btn-xs" *ngIf="listEditMode == MODE_VIEW" (click)="onEnterListEditMode()">Edit List</button>
-    <textarea *ngIf="listEditMode == MODE_EDIT" [(ngModel)]="product.keywordListText" placeholder="name" rows="10"></textarea>
+    <textarea *ngIf="listEditMode == MODE_EDIT" [(ngModel)]="product.keywordListText" placeholder="name" rows="100"></textarea>
     <div *ngIf="listEditMode == MODE_VIEW">
-      <table class="table  table-striped table-condensed keyword-list-table" *ngFor='let keyword of product.keywordList'>
-        <tr>
+
+      <table class="keyword-list-table" >
+          <tr>
+              <th>Keyword</th>
+
+          </tr>
+          <tbody >
+        <tr *ngFor='let keyword of product.keywordList'>
           <td>{{keyword}}</td>
         </tr>
+      </tbody>
       </table>
     </div>
     <!-- <button  (click)="onRemove()">Remove</button> -->
