--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,10 +1,10 @@
 <div>
   <h3>Project&nbsp;&nbsp;&nbsp;Name:
     <input type="text" [(ngModel)]="project.name">
-    <button class="btn btn-default btn-xs"   (click)="onDelete()">Remove Project</button>
+    <button class="btn btn-default btn-xs" (click)="onDelete()">Remove Project</button>
     <span *ngIf="isConfirmRemovePending" class="deleteConfirmPending">
-        <button class="btn btn-default btn-xs"  (click)="onDeleteCancel()">Cancel Remove Project</button>
-        <button class="btn btn-danger btn-xs"  (click)="onDeleteConfirm()">Confirm Remove Project</button>
+      <button class="btn btn-default btn-xs" (click)="onDeleteCancel()">Cancel Remove Project</button>
+      <button class="btn btn-danger btn-xs" (click)="onDeleteConfirm()">Confirm Remove Project</button>
 
     </span>
     <br/>Target ASIN:
@@ -13,7 +13,9 @@
   <a routerLink="/totals/{{project.name}}">Totals</a>
 </div>
 <button (click)="onSaveProject()">Save Project</button>
-<div *ngFor="let item of project.products">
-  <app-product [product]="item" ></app-product>
+<div class="product-container">
+  <div class="product" *ngFor="let item of project.products">
+    <app-product [product]="item"></app-product>
+  </div>
 </div>
 <button (click)="onAddProduct()">Add Product</button>
