--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,4 @@
-<h3>Projects</h3>
+<h3 class="text-center">Projects</h3>
 <div class="grid grid-pad">
     <a routerLink="/project/">Add New</a>
   <a *ngFor="let project of projectList" class=""
